[project]
name = "looking-glass-vid"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Joe Hsu", email = "jhsu.x1@gmail.com"},
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "numpy>=2.1.1",
    "flask>=3.0.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
